--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 class="title">Marvel Comics</h1>
     <div class="tabContainer">
         <div class="buttonContainer">
-            <button onclick="showPanel(0,'#8406a1')">Characters</button>
+            <button class = "marvelCharacters" onclick="showPanel(0,'#8406a1')">Characters</button>
             <button onclick="showPanel(1,'#884b96')">Comics</button>
             <button onclick="showPanel(2,'#8d7c91')">Another Thing</button>
             <button onclick="showPanel(3,'#d5ced6')">Another Thing</button>
