--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         
         <!-- This panel holds all character info -->
         <div class="tabPanel">
-                <h2>Character Name</h2>
+                <h2 class="character-name">Character Name</h2>
             <div class="char-image-box"></div>
             <div class="char-bio-box">
                 
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                <p class="character-bio">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Aliquid odit, asperiores exercitationem eius officia fugiat. 
                     Enim praesentium officiis perferendis unde adipisci quae nemo 
                     fugit quam, debitis facere architecto rerum earum.</p>
