trying to stop this nonsense

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <div class="ph">
                 
                 <p class="ph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                <h2>Character Name</h2>
+            <div class="char-image-box"></div>
+            <div class="char-bio-box">
+                
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Aliquid odit, asperiores exercitationem eius officia fugiat. 
                     Enim praesentium officiis perferendis unde adipisci quae nemo 
                     fugit quam, debitis facere architecto rerum earum.</p>
