added styling, prev next buttons

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                                         in the comic book industry. Explore the Marvel Comic universe using 
                                         this helpful tool!
                 </p>
+                <div class="prev-next-buttons">
+                        <button class="prev"><span>Prev</span></button>
+                        <button class="next"><span>Next</span></button>
+                        </div> 
             </div>
         </div>
 
@@ -41,6 +45,10 @@
                 <div class="char-image-box-xmen"></div>
                 <div class="char-bio-box">
                 <p class="character-bio">The X-Men are awesome!</p>
+                <div class="prev-next-buttons">
+                <button class="prev"><span>Prev</span></button>
+                <button class="next"><span>Next</span></button>
+                </div>  
             </div>
         </div>
 
@@ -50,6 +58,10 @@
                 <div class="char-image-box-avengers"></div>
                 <div class="char-bio-box">
                 <p class="character-bio">The Avengers are awesome!</p>
+                <div class="prev-next-buttons">
+                        <button class="prev"><span>Prev</span></button>
+                        <button class="next"><span>Next</span></button>
+                        </div> 
             </div>
         </div>
         
@@ -60,6 +72,10 @@
                     <div class="char-image-box-gotg"></div>
                     <div class="char-bio-box">
                     <p class="character-bio">The Guardians of the Galaxy are awesome!</p>
+                    <div class="prev-next-buttons">
+                            <button class="prev"><span>Prev</span></button>
+                            <button class="next"><span>Next</span></button>
+                            </div> 
                 </div>
         </div>
         </div>
