working on avengers panel

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 <div class="char-bio-box">
                 <p class="avengers-bio">The Avengers are awesome!</p>
                 <div class="prev-next-buttons">
-                        <button class="prev"><span>Prev</span></button>
-                        <button class="next"><span>Next</span></button>
+                        <button id="prevAvenger" class="prev"><span>Prev</span></button>
+                        <button id="nextAvenger" class="next"><span>Next</span></button>
                         </div> 
             </div>
         </div>
