all panel logic is complete, bugs to fix with prev next buttons

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                     <div class="char-bio-box">
                     <p class="gotg-bio">The Guardians of the Galaxy are awesome!</p>
                     <div class="prev-next-buttons">
-                            <button class="prev"><span>Prev</span></button>
-                            <button class="next"><span>Next</span></button>
+                            <button id="prevGotg" class="prev"><span>Prev</span></button>
+                            <button id="nextGotg" class="next"><span>Next</span></button>
                             </div> 
                 </div>
         </div>
