working on name search

--- a/index.html
+++ b/index.html
@@ -29,16 +29,15 @@
         <!-- This panel holds all character info -->
         <div class="tabPanel">
                 <h2 class="character-name">Marvel</h2>
-            <div class="char-image-box"></div>
+                <input id="name-input" type="text" value="Try finding a character!">
+                <input id="submit" type="submit" value="Go!">
+            <div class="char-image-box">            
+            </div>
             <div class="char-bio-box">              
                 <p class="character-bio">Founded in 1939, Marvel Comics is one of the biggest powerhouses 
                                         in the comic book industry. Explore the Marvel Comic universe using 
                                         this helpful tool!
                 </p>
-                <div class="prev-next-buttons">
-                        <button class="prev"><span>Prev</span></button>
-                        <button class="next"><span>Next</span></button>
-                        </div> 
             </div>
         </div>
 
