Project complete, just need to fix bug on first load

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                 <h2 class="xmen-name">X-Men</h2>
                 <div class="char-image-box-xmen"></div>
                 <div class="char-bio-box">
-                <p class="xmen-bio">The X-Men are awesome!</p>
+                <p class="xmen-bio">Created by artist/co-writer Jack Kirby and writer Stan Lee, 
+                        the X-Men first appeared in The X-Men #1 (September 1963) and formed one of the 
+                        most recognizable and successful franchises in the history of Marvel Comics.</p>
                 <div class="prev-next-buttons">
                 <button id="prevXMen" class="prev"><span>Prev</span></button>
                 <button id="nextXMen" class="next"><span>Next</span></button>
@@ -59,7 +61,8 @@
                 <h2 class="avengers-name">The Avengers</h2>
                 <div class="char-image-box-avengers"></div>
                 <div class="char-bio-box">
-                <p class="avengers-bio">The Avengers are awesome!</p>
+                <p class="avengers-bio">The Avengers made its debut in The Avengers #1 (cover-dated Sept. 1963), 
+                    created by writer Stan Lee and artist Jack Kirby.</p>
                 <div class="prev-next-buttons">
                         <button id="prevAvenger" class="prev"><span>Prev</span></button>
                         <button id="nextAvenger" class="next"><span>Next</span></button>
@@ -73,7 +76,8 @@
                     <h2 class="gotg-name">Guardians of the Galaxy</h2>
                     <div class="char-image-box-gotg"></div>
                     <div class="char-bio-box">
-                    <p class="gotg-bio">The Guardians of the Galaxy are awesome!</p>
+                    <p class="gotg-bio">The Guardians of the Galaxy are an outlaw superhero team 
+                        appearing in Marvel Comics. The Guardians first appeared in Marvel Super-Heroes #18 (Jan. 1969).</p>
                     <div class="prev-next-buttons">
                             <button id="prevGotg" class="prev"><span>Prev</span></button>
                             <button id="nextGotg" class="next"><span>Next</span></button>
